[gd_scene load_steps=44 format=2]

[ext_resource path="res://Ranger.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload4.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload5.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload6.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload7.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload8.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload9.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload10.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Spectral_rang/reload/Spectral_ranger_reload11.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk1.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk2.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk3.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk4.png" type="Texture" id=16]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk5.png" type="Texture" id=17]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk6.png" type="Texture" id=18]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk7.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_rang_walk/Spectral_ranger_walk8.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Spectral_rang/Spectral_ranger_static.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_corps1.png" type="Texture" id=22]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=23]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=24]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms2.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms3.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms4.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms5.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms6.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms7.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms8.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms9.png" type="Texture" id=32]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms10.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms11.png" type="Texture" id=34]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms12.png" type="Texture" id=35]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms13.png" type="Texture" id=36]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms14.png" type="Texture" id=37]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms15.png" type="Texture" id=38]
[ext_resource path="res://Graphics/Spectral_rang/Shooting/Spectral_ranger_shoot_arms16.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "reload",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "mouv",
"speed": 9.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "static",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "shoot",
"speed": 15.0
} ]

[node name="Ranger" type="KinematicBody2D" groups=[
"Character_sprite",
]]
script = ExtResource( 1 )

[node name="Ranger_spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "static"
__meta__ = {
"_edit_lock_": true
}

[node name="barre_vie" type="AnimatedSprite" parent="Ranger_spr"]
position = Vector2( -4, -21 )
frames = SubResource( 2 )

[node name="vie" type="AnimatedSprite" parent="Ranger_spr/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 3 )
centered = false

[node name="hit_box_R" type="CollisionPolygon2D" parent="."]
position = Vector2( -3, 1 )
polygon = PoolVector2Array( -5, 19, 6, 19, 6, 17, 5, 17, 5, -3, 7, -5, 7, -8, 4, -10, 4, -11, 5, -12, 5, -18, 2, -20, -1, -20, -5, -18, -5, -11, -4, -11, -5, -8, -6, -7, -6, -3, -5, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="hit_box_L" type="CollisionPolygon2D" parent="."]
position = Vector2( 3, 1 )
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( -5, 19, 6, 19, 6, 17, 5, 17, 5, -3, 7, -5, 7, -8, 4, -10, 4, -11, 5, -12, 5, -18, 2, -20, -1, -20, -5, -18, -5, -11, -4, -11, -5, -8, -6, -7, -6, -3, -5, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ranger_arm" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="Pos_L" type="Position2D" parent="."]
position = Vector2( 0, -11 )

[node name="Pos_R" type="Position2D" parent="."]
